BP was a failure, messing with evolution

--- a/llncs2e/article.tex
+++ b/llncs2e/article.tex
@@ -34,6 +34,8 @@ The goal of AI is an introduction to artificial neural networks, and therefore t
 
 The complexity of the LUDO game, makes it impossible to make a analytical solution by simple determining every solution for every state, thus making decision making a lookup table, as shown in \citep{6031999}. This article tries to determine an appropriate neural network for an agent playing on level with other solutions.
 
+The performance of the ludo player will be measured by the proverb "If you ain't first you're last"\footnote{http://en.wikiquote.org/wiki/Talladega_Nights:_The_Ballad_of_Ricky_Bobby}, thus only the amount of victories will be measured. That is test will be run for the ludo player against proportional opponents until a linearity is found, i.e. more plays wont change the relationship between wins.
+
 Originally the neural networks were trained using different error minimization procedures.
 
 Training the neural network.
