--- a/llncs2e/article_bibtex.bib
+++ b/llncs2e/article_bibtex.bib
@@ -24,3 +24,29 @@ doi={10.1109/CIG.2011.6031999},}
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
 } 
+
+@book{Russell,
+ author = {Russell, Stuart J. and Norvig, Peter},
+ title = {Artificial Intelligence: A Modern Approach},
+ year = {2010},
+ isbn = {0132071487},
+ edition = {2},
+ publisher = {Pearson Education},
+} 
+
+@article{schaul2010,
+author = {Schaul, Tom and Bayer, Justin and Wierstra, Daan and Sun, Yi and Felder, Martin and Sehnke, Frank and R\"{u}ckstie\ss, Thomas and Schmidhuber, J\"{u}rgen},
+journal = {Journal of Machine Learning Research},
+keywords = {machine learning,neural networks,optimization,python,reinforcement learning},
+title = {{PyBrain}},
+year = {2010}
+}
+
+@ONLINE{NeuronOnline,
+%author = {Doe, Ringo},
+%title = {This is a test entry of type {@ONLINE}},
+month = may,
+year = {2014},
+url = {http://www.doc.ic.ac.uk/~nd/surprise_96/journal/vol4/cs11/report.html}
+}
+
