Began experimenting with many hidden layers.

--- a/llncs2e/article_bibtex.bib
+++ b/llncs2e/article_bibtex.bib
@@ -1,5 +1,3 @@
-%bibtex
-
 @INPROCEEDINGS{6031999,
 author={Alvi, F. and Ahmed, M.},
 booktitle={Computational Intelligence and Games (CIG), 2011 IEEE Conference on},
@@ -8,7 +6,8 @@ year={2011},
 month={Aug},
 pages={134-141},
 keywords={evolutionary computation;game theory;learning (artificial intelligence);Ludo;evolutionary game analysis;non-deterministic race game;playing strategies;state-space complexity;temporal difference learning networks;Complexity theory;Computational intelligence;Conferences;Equations;Games;Training;Upper bound},
-doi={10.1109/CIG.2011.6031999},}
+doi={10.1109/CIG.2011.6031999}
+}
 
 @incollection{Rumelhart:1988:LRB:65669.104451,
  author = {Rumelhart, David E. and Hinton, Geoffrey E. and Williams, Ronald J.},
@@ -22,7 +21,7 @@ doi={10.1109/CIG.2011.6031999},}
  url = {http://dl.acm.org/citation.cfm?id=65669.104451},
  acmid = {104451},
  publisher = {MIT Press},
- address = {Cambridge, MA, USA},
+ address = {Cambridge, MA, USA}
 } 
 
 @book{Russell,
@@ -31,7 +30,7 @@ doi={10.1109/CIG.2011.6031999},}
  year = {2010},
  isbn = {0132071487},
  edition = {2},
- publisher = {Pearson Education},
+ publisher = {Pearson Education}
 } 
 
 @article{schaul2010,
